WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148752
Swipe tests fail on Mavericks
https://bugs.webkit.org/show_bug.cgi?id=148752
Summary
Swipe tests fail on Mavericks
Tim Horton
Reported
2015-09-03 14:56:20 PDT
Swipe tests fail on Mavericks
Attachments
Patch
(1.71 KB, patch)
2015-09-03 14:56 PDT
,
Tim Horton
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2015-09-03 14:56:44 PDT
Created
attachment 260528
[details]
Patch
Tim Horton
Comment 2
2015-09-03 16:47:45 PDT
http://trac.webkit.org/changeset/189304
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug