Swipe tests fail on Mavericks https://bugs.webkit.org/show_bug.cgi?id=148752

Reviewed by Beth Dakin.

* WebKitTestRunner/mac/EventSenderProxy.mm:


Canonical link: https://commits.webkit.org/166872@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189304 268f45cc-cd09-0410-ab3c-d52691b4dbfc